# full-stack-todolist

./: README.md  docker-compose.yml
backend/: Dockerfile
backend/app/: .env.example  main.py  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: d53c2bf8864e_create_drop_todo_table.py
backend/app/app/crud/: todo.py
backend/app/app/db/: session.py
backend/app/app/models/: todo.py
backend/app/app/resolvers/: todo.py
backend/app/app/schemas/: mutation.py  query.py
backend/app/app/types/: todo.py
frontend/todolist/: .env.example  package-lock.json  package.json
frontend/todolist/src/: App.tsx
frontend/todolist/src/axios/to-do-list/: index.ts
frontend/todolist/src/components/: TodoTable.tsx
frontend/todolist/src/pages/: ToDoListPage.tsx
frontend/todolist/src/schema/: todos.ts
